(library
  (name hardcaml_zinc_test)
  (libraries compiler-libs.bytecomp hardcaml_waveterm hardcaml_zinc expect_test_helpers_kernel)
  (preprocess (pps ppx_jane ppx_expect ppx_deriving_hardcaml))
  (inline_tests (deps
    ../examples/helloworld.bc
    ../examples/runtime.bc
    ../examples/arithmetic.bc
  ))
)
